--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
+dotenvy = "0.15.7"
+openssl = "0.10.73"
+postgres = "0.19.10"
+postgres-openssl = "0.5.1"
 
 shlex = "1.3.0"
